--- a/SchoolManagementMVC/SchoolManagementMVC.csproj
+++ b/SchoolManagementMVC/SchoolManagementMVC.csproj
@@ -148,8 +148,10 @@
     <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Controllers\StatesController.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
+    <Compile Include="Controllers\UploadFilesController.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\EmployeeView.cs" />
+    <Compile Include="Models\FileDetail.cs" />
     <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\Parent.cs" />
     <Compile Include="Models\Position.cs" />
