--- a/SchoolManagementMVC/SchoolManagementMVC.csproj
+++ b/SchoolManagementMVC/SchoolManagementMVC.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Controllers\UploadFilesController.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\EmployeeView.cs" />
+    <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\FileDetail.cs" />
     <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\Parent.cs" />
